Add users api
